--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,19 @@
   --color-black-russian: #0d0b1c;
   --color-chinese-black: #100e24;
   --color-rich-black: #030211;
+  --color-blue-munsell: #0093AF;
 }
+
+@layer components {
+  .contact-link {
+    @apply inline-flex items-center justify-center rounded-full transition-all duration-500 ease-in-out border-0
+  }
+
+  .btn {
+    @apply cursor-pointer py-3.5 px-7 inline-flex items-center justify-center transition-colors ease-in-out duration-500 bg-linear-90 from-0% to-blue-munsell to-100% from-indigo-dye hover:to-indigo-dye
+  }
+}
+
 
 .custom-cursor {
   position: fixed;
@@ -23,4 +35,17 @@
   transition: transform 0.1s ease-out;
   z-index: 9999;
   mix-blend-mode: difference;
+}
+
+
+.text-stroke {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: var(--color-blue-munsell);
+  -webkit-text-fill-color: transparent;
+}
+
+.number-stroke {
+  background: linear-gradient(270deg, var(--color-indigo-dye) 5%, var(--color-blue-munsell) 90%);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
