--- a/src/index.css
+++ b/src/index.css
@@ -9,19 +9,18 @@
   --color-black-russian: #0d0b1c;
   --color-chinese-black: #100e24;
   --color-rich-black: #030211;
-  --color-blue-munsell: #0093AF;
+  --color-blue-munsell: #0093af;
 }
 
 @layer components {
   .contact-link {
-    @apply inline-flex items-center justify-center rounded-full transition-all duration-500 ease-in-out border-0
+    @apply inline-flex items-center justify-center rounded-full transition-all duration-500 ease-in-out border-0;
   }
 
   .btn {
-    @apply cursor-pointer py-3.5 px-7 inline-flex items-center justify-center transition-colors ease-in-out duration-500 bg-linear-90 from-0% to-blue-munsell to-100% from-indigo-dye hover:to-indigo-dye
+    @apply cursor-pointer py-3.5 px-7 inline-flex items-center justify-center transition-colors ease-in-out duration-500 bg-linear-90 from-0% to-blue-munsell to-100% from-indigo-dye hover:to-indigo-dye rounded-br-4xl rounded-tl-4xl;
   }
 }
-
 
 .custom-cursor {
   position: fixed;
@@ -37,7 +36,6 @@
   mix-blend-mode: difference;
 }
 
-
 .text-stroke {
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: var(--color-blue-munsell);
@@ -45,7 +43,11 @@
 }
 
 .number-stroke {
-  background: linear-gradient(270deg, var(--color-indigo-dye) 5%, var(--color-blue-munsell) 90%);
+  background: linear-gradient(
+    270deg,
+    var(--color-indigo-dye) 5%,
+    var(--color-blue-munsell) 90%
+  );
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
