--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   }
 
   .btn {
-    @apply cursor-pointer py-3.5 px-7 inline-flex items-center justify-center transition-colors ease-in-out duration-500 bg-linear-90 from-0% to-blue-munsell to-100% from-indigo-dye hover:to-indigo-dye rounded-br-4xl rounded-tl-4xl;
+    @apply cursor-pointer py-3.5 px-7 inline-flex items-center justify-center transition-colors ease-in-out duration-500 bg-linear-90 from-0% to-blue-munsell to-100% from-indigo-dye hover:to-indigo-dye rounded-lg font-semibold;
   }
 }
 
