--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,23 @@
   --color-chinese-black: #100e24;
   --color-rich-black: #030211;
   --color-blue-munsell: #0093af;
+  --color-green-blue: #1164B4;
+  --color-eerie-black: #101624
 }
 
 @layer components {
   .contact-link {
-    @apply inline-flex items-center justify-center rounded-full transition-all duration-500 ease-in-out border-0;
+    @apply relative flex items-center justify-center px-3.5 h-12 rounded-full bg-rich-black  text-neutral-200/75 transition-all duration-300 ease-in-out hover:pr-20 hover:justify-baseline; 
+    /* #070d1b => link bg */
+    /* #101624 => container bg */ 
+  }
+
+  .contact-homePage-link {
+    @apply inline-flex items-center justify-center rounded-full transition-all duration-500 ease-in-out border-0
   }
 
   .btn {
-    @apply cursor-pointer py-3.5 px-7 inline-flex items-center justify-center transition-colors ease-in-out duration-500 bg-linear-90 from-0% to-blue-munsell to-100% from-indigo-dye hover:to-indigo-dye rounded-lg font-semibold;
+    @apply cursor-pointer py-3.5 px-7 inline-flex items-center justify-center transition-colors ease-in-out duration-500 bg-linear-90 from-50% from-indigo-dye to-green-blue to-100% rounded-lg font-semibold hover:from-green-blue hover:to-indigo-dye hover:from-0% hover:to-50%;
   }
 }
 
@@ -38,15 +46,15 @@
 
 .text-stroke {
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: var(--color-blue-munsell);
+  -webkit-text-stroke-color: var(--color-green-blue);
   -webkit-text-fill-color: transparent;
 }
 
 .number-stroke {
   background: linear-gradient(
     270deg,
-    var(--color-indigo-dye) 5%,
-    var(--color-blue-munsell) 90%
+    var(--color-indigo-dye) 0%,
+    var(--color-blue-munsell) 120%
   );
   -webkit-text-fill-color: transparent;
   background-clip: text;
