--- a/src/index.css
+++ b/src/index.css
@@ -10,19 +10,19 @@
   --color-chinese-black: #100e24;
   --color-rich-black: #030211;
   --color-blue-munsell: #0093af;
-  --color-green-blue: #1164B4;
-  --color-eerie-black: #101624
+  --color-green-blue: #1164b4;
+  --color-eerie-black: #101624;
 }
 
 @layer components {
   .contact-link {
-    @apply relative flex items-center justify-center px-3.5 h-12 rounded-full bg-rich-black  text-neutral-200/75 transition-all duration-300 ease-in-out hover:pr-20 hover:justify-baseline; 
+    @apply relative flex items-center justify-center px-3.5 h-12 rounded-full bg-rich-black  text-neutral-200/75 transition-all duration-300 ease-in-out hover:pr-20 hover:justify-baseline;
     /* #070d1b => link bg */
-    /* #101624 => container bg */ 
+    /* #101624 => container bg */
   }
 
   .contact-homePage-link {
-    @apply inline-flex items-center justify-center rounded-full transition-all duration-500 ease-in-out border-0
+    @apply inline-flex items-center justify-center rounded-full transition-all duration-500 ease-in-out border-0;
   }
 
   .btn {
