--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 
 @layer components {
   .contact-link {
-    @apply relative flex items-center justify-center px-3.5 h-12 rounded-full bg-platinum dark:bg-black-currant border border-rich-black/50 dark:border-dark-grayish-blue text-rich-black/80 dark:text-neutral-200/75 transition-all duration-700 ease-in-out hover:pr-20 hover:justify-baseline;
+    @apply relative flex items-center justify-center px-3.5 h-12 rounded-full bg-platinum dark:bg-black-currant border border-rich-black/50 dark:border-dark-grayish-blue text-rich-black/80 dark:text-neutral-200/75 transition-all duration-700 ease-in-out hover:pr-20 hover:justify-baseline cursor-pointer;
     /* #070d1b => link bg */
     /* #101624 => container bg */
   }
@@ -35,7 +35,7 @@
   }
 
   .btn {
-    @apply cursor-pointer lg:py-3.5 lg:px-7 py-3 px-5 inline-flex items-center justify-center transition-colors ease-in-out duration-700 -bg-linear-300 from-20% dark:from-indigo-dye dark:to-green-blue to-persian-green from-myrtle-green to-100% rounded-lg font-semibold hover:from-persian-green dark:hover:from-green-blue dark:hover:to-indigo-dye hover:to-myrtle-green hover:from-0% hover:to-50% text-neutral-200;
+    @apply cursor-pointer lg:py-3.5 lg:px-7 py-3 px-5 flex items-center justify-center transition-colors ease-in-out duration-700 -bg-linear-300 from-20% dark:from-indigo-dye dark:to-green-blue to-persian-green from-myrtle-green to-100% rounded-lg font-semibold hover:from-persian-green dark:hover:from-green-blue dark:hover:to-indigo-dye hover:to-myrtle-green hover:from-0% hover:to-50% text-neutral-200;
   }
 }
 
